# aurora_ferry

./: .gitignore  .gitmodules  MANIFEST.in  README.md  __init__.py  env.yml  env_linux.yml  main.py  observation_space_ranges.json  pyproject.toml
data/: ferry_data.json
src/: __init__.py  ais.py  aurora.py  camera.py  diff_mpc.py  diff_mpc_tracking.py  discrete_dynamics.py  env.py  guidance.py  map.py  navigation.py  odm.py  odm_training.json  state_estimator.py  target_tracker.py  weather.py
src/ais/: ais.py
src/camera/: camera.py  config.yaml  weather.py
src/environment/: ais_old.py  map.py
src/eval/: power_cons_figures.py  traj_tracking_figures.py
src/ferry/: aurora.py  ctrv_tt.py  cvm_tt.py  guidance.py  navigation.py  state_estimator.py  target_tracker.py
src/mpcrl/: train.py  traj_tracking_env.py  trajectory_tracker.py
src/rl/: env.py  load_and_test.py  parallel_train.py  ppo_controller.py  rl_controller.py  sac_controller.py  train.py  training.yaml  traj_tracking_controller.py  traj_tracking_env.py
src/scenarios/: default_config.json  default_config.yaml  generator.py  odm_generator.py  parallel_sim_launcher.py  sim_analyzer.py  sim_launcher.py  test.yaml
src/utils/: interpolate_ais.py  normalize.py  split.py
test/: aurora_full_thrust.py  aurora_full_turn.py  aurora_target_tracker.py  aurora_traj_tracker.py  interactive_map_with_ais.py  revolt_control.py  rl_traj_tracking.py
