[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-ferry"
version = "0.1.0"
description = "Aurora Ferry Simulation and Navigation System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stephen Monnet", email = "stephen.monnet@outlook.com"}
]
maintainers = [
    {name = "Stephen Monnet", email = "stephen.monnet@outlook.com"}
]
keywords = ["simulation", "ferry", "navigation", "ais", "maritime", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pyproj>=3.0.0",
    "shapely>=1.8.0",
    "requests>=2.25.0",
    "casadi>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "pre-commit>=2.15",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
jupyter = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=7.6",
]

[project.urls]
Homepage = "https://github.com/stiefen1/aurora_ferry"
Repository = "https://github.com/stiefen1/aurora_ferry.git"
Issues = "https://github.com/stiefen1/aurora_ferry/issues"
Documentation = "https://github.com/stiefen1/aurora_ferry/blob/master/README.md"

[project.scripts]
aurora-ferry = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"aurora_ferry" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | submodules
)/
'''

[tool.pytest.ini_options]
testpaths = ["test", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "submodules/",
    "build/",
    "dist/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test*",
    "*/submodules/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]